# 20240808_BastionAutoShutdown

./: .funcignore  MEMO.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: main_fn-test-common-dev.yml
azure_infra/: MEMO.md  Pulumi.dev.yaml  __main__.py  pyproject.toml
azure_infra/azure_infra/: bastion.py  common.py  main.py  misc.py  names.py  network.py
bastion_management/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
bastion_management/bastion_management/: app.py  main.py  names.py
bastion_management/bastion_management/templates/: register.json.j2
pulumi/: .gitignore  MEMO.md  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
pulumi/azure_infra/: bastion.py  common.py  main.py  names.py  network.py
